# crud-with-python

./: .gitignore  Dockerfile  api.py  main.py  pyproject.toml
database_connection/: database.py  initializer.py
models/: Compra.py  Condominio.py  DetalleCompra.py  Pago.py  Producto.py  Tarjeta.py  Usuario.py  UsuarioCondominio.py  base.py
repositories/: producto_repository.py  usuario_repository.py
routers/: productos.py  usuarios.py
schemas/: producto.py  usuario.py
services/: producto_service.py  usuario_service.py
tests/: test_usuario_service.py
