[project]
name = "python-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "configparser>=7.2.0",
    "cryptography>=46.0.4",
    "loguru>=0.7.3",
    "peewee>=4.0.0",
    "pewee>=0.1.0.dev9",
    "pymysql>=1.1.2",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
